--- a/index.html
+++ b/index.html
@@ -25,17 +25,20 @@
     <div class="container">
       <div class="head-content">
         <h2 class="title">Fresh Life</h2>
-        <p>
+        <p class="text">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit.
           Mauris dignissim, nisi id interdum placerat, purus tortor placerat felis, eget tristique ipsum sapien eget ligula.
           Etiam fermentum tempus purus sed pulvinar.
         </p>
-        <button>Get Free Now</button>
+        <button class="btn get-free">Get Free Now</button>
     </div>
+    <a class="btn-scroll" href="#about" title="Scroll to about section">
+      <img src="./img/scroll-icon.png" alt="Scroll image">
+    </a>
   </div>
   </header>
   <main>
-    <section class="about">
+    <section class="about" id="about">
       <div class="container">
         <h2>About Us</h2>
         <p>
