working on my grid

--- a/index.html
+++ b/index.html
@@ -22,24 +22,24 @@
     </ul>
   </nav>
   <header class="head">
-    <div class="container">
-      <div class="head-content">
+    <div class="grid-container">
+      <div class="col-1-2">
         <h2 class="title">Fresh Life</h2>
         <p class="text">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-          Mauris dignissim, nisi id interdum placerat, purus tortor placerat felis, eget tristique ipsum sapien eget ligula.
-          Etiam fermentum tempus purus sed pulvinar.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            Mauris dignissim, nisi id interdum placerat, purus tortor placerat felis, eget tristique ipsum sapien eget ligula.
+            Etiam fermentum tempus purus sed pulvinar.
         </p>
         <button class="btn get-free">Get Free Now</button>
+        <a class="btn-scroll" href="#about" title="Scroll to about section">
+          <img src="./img/scroll-icon.png" alt="Scroll image">
+        </a>
+      </div>
     </div>
-    <a class="btn-scroll" href="#about" title="Scroll to about section">
-      <img src="./img/scroll-icon.png" alt="Scroll image">
-    </a>
-  </div>
   </header>
   <main>
     <section class="about" id="about">
-      <div class="container">
+      <div class="grid-container">
         <h2>About Us</h2>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -49,7 +49,7 @@
       </div>
     </section>
     <section class="services">
-      <div class="container">
+      <div class="grid-container">
         <h2>Our services</h2>
         <ul>
           <li>Online Shopping</li>
@@ -60,7 +60,7 @@
     </div>
     </section>
     <section class="gallery">
-      <div class="container">
+      <div class="grid-container">
         <h2 class="title">Gallery</h2>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -75,7 +75,7 @@
       </div>
     </section>
     <section class="subscribe">
-      <div class="container">
+      <div class="grid-container">
         <h2>Subscribe To Us</h2>
         <p>
           Dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
@@ -86,7 +86,7 @@
       </div>
     </section>
     <section class="blog">
-      <div class="container">
+      <div class="grid-container">
         <h2>Blog<h2>
         <p>
         </p>
@@ -97,7 +97,7 @@
       </div>
     </section>
     <section class="contact">
-      <div class="container">
+      <div class="grid-container">
         <h2>Contact</h2>
         <p>
           For new projects, ideas, business or anything you'd like to discuss,
