Header redesign finished

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </nav>
   <header class="head">
     <div class="grid-container">
-      <div class="col-1-2">
+      <div class="col-1-2 content">
         <h2 class="title">Fresh Life</h2>
         <p class="text">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -31,10 +31,10 @@
             Etiam fermentum tempus purus sed pulvinar.
         </p>
         <button class="btn get-free">Get Free Now</button>
-        <a class="btn-scroll" href="#about" title="Scroll to about section">
-          <img src="./img/scroll-icon.png" alt="Scroll image">
-        </a>
-      </div>
+    </div>
+    <a class="btn-scroll" href="#about" title="Scroll to about section">
+      <img src="./img/scroll-icon.png" alt="Scroll image">
+    </a>
     </div>
   </header>
   <main>
