About Us section ready, working on services

--- a/index.html
+++ b/index.html
@@ -39,24 +39,59 @@
   </header>
   <main>
     <section class="about" id="about">
-      <div class="grid-container">
-        <h2>About Us</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-          Mauris dignissim, nisi id interdum placerat, purus tortor placerat felis, eget tristique ipsum sapien eget ligula.
-          Etiam fermentum tempus purus sed pulvinar.
-        </p>
+      <div class="grid-container reversed">
+        <div class="col-1-2">
+          <h2 class="header">About Us</h2>
+          <p class="text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            Mauris dignissim, nisi id interdum placerat, purus tortor placerat felis, eget tristique ipsum sapien eget ligula.
+            Etiam fermentum tempus purus sed pulvinar.
+          </p>
+          <p class="text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            Mauris dignissim, nisi id interdum placerat, purus tortor placerat felis, eget tristique ipsum sapien eget ligula.
+            Etiam fermentum tempus purus sed pulvinar.
+          </p>
+        </div>
+        <div class="col-1-2">
+          <img src="./img/cup.png" alt="Cup of raspberries">
+        </div>
       </div>
     </section>
     <section class="services">
-      <div class="grid-container">
-        <h2>Our services</h2>
-        <ul>
-          <li>Online Shopping</li>
-          <li>Quality Product</li>
-          <li>Domestic & International Delivery</li>
-          <li>Well Organized</li>
-        </ul>
+      <div class="grid-container reversed">
+        <div class="col-1-2">
+          <h2 class="header">Our services</h2>
+          <img src="./img/potatoes.png" alt="Potatoes">
+        </div>
+        <div class="col-1-2">
+          <ul class="services-list">
+            <li class="service-item">
+              <div class="category"><strong>Online Shopping</strong></div>
+              <div class="category-picture">
+                <img src="./img/trolley-icon.png">
+              </div>
+            </li>
+            <li class="service-item">
+              <div class="category"><strong>Quality Product<strong></div>
+                <div class="category-picture">
+                  <img src="./img/hand-icon.png">
+                </div>
+              </li>
+            <li class="service-item">
+              <div class="category"><strong>Domestic & International Delivery</strong></div>
+              <div class="category-picture">
+                <img src="./img/globe-icon.png">
+              </div>
+              </li>
+            <li class="service-item">
+              <div class="category"><strong>Well Organized<strong></div>
+                <div class="category-picture">
+                  <img src="./img/carrot-icon.png">
+                </div>
+              </li>
+          </ul>
+        </div>
     </div>
     </section>
     <section class="gallery">
