Services section, working on gallery

--- a/index.html
+++ b/index.html
@@ -96,13 +96,13 @@
     </section>
     <section class="gallery">
       <div class="grid-container">
-        <h2 class="title">Gallery</h2>
-        <p>
+        <h2 class="header">Gallery</h2>
+        <p class="text">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit.
           Mauris dignissim, nisi id interdum placerat, purus tortor placerat felis, eget tristique ipsum sapien eget ligula.
           Etiam fermentum tempus purus sed pulvinar.
         </p>
-        <div>
+        <div class=pictures-gallery>
           <img src="">
           <img src="">
           <img src="">
