Working on gallery

--- a/index.html
+++ b/index.html
@@ -98,16 +98,26 @@
       <div class="grid-container">
         <h2 class="header">Gallery</h2>
         <p class="text">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-          Mauris dignissim, nisi id interdum placerat, purus tortor placerat felis, eget tristique ipsum sapien eget ligula.
-          Etiam fermentum tempus purus sed pulvinar.
+          Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
         </p>
-        <div class=pictures-gallery>
-          <img src="">
-          <img src="">
-          <img src="">
+        <div class=gallery-row>
+          <div class="gallery-col main">
+            <img src="./img/gallery-image-1.png">
+          </div>
+          <div class="gallery-col side">
+            <img src="./img/gallery-image-2.png">
+            <img src="./img/gallery-image-3.png">
+          </div>
+        </div>
+        <div class=gallery-row>
+          <div class="gallery-col">
+            <img src="./img/gallery-image-4.png">
+            <img src="./img/gallery-image-5.png">
+          </div>
         </div>
       </div>
+      <button class="btn view-more">View More</button>
     </section>
     <section class="subscribe">
       <div class="grid-container">
