finished gallery grid, subscribe section redesign

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
           </div>
         </div>
         <div class=gallery-row>
-          <div class="gallery-col">
+          <div class="gallery-col full">
             <img src="./img/gallery-image-4.png">
             <img src="./img/gallery-image-5.png">
           </div>
@@ -121,13 +121,13 @@
     </section>
     <section class="subscribe">
       <div class="grid-container">
-        <h2>Subscribe To Us</h2>
-        <p>
-          Dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-          Ut enim ad minim veniam.
-        </p>
-        <input type="mail" placeholder="Your email address...">
-        <button>Subscribe</button>
+          <h2 class="header">Subscribe To Us</h2>
+          <p class="text">
+            Dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            Ut enim ad minim veniam.
+          </p>
+          <input type="mail" placeholder="Your email address...">
+          <button class="btn btn-subscribe">Subscribe</button>
       </div>
     </section>
     <section class="blog">
