--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <h1>Fresh Life Company Site</h1>
   <nav class="nav">
     <div class="nav-content">
-      <img src="./img/logo-dark.png" alt="Fresh life company logo">
+      <a href="#head"><img src="./img/logo-dark.png" alt="Fresh life company logo"></a>
       <ul class="nav-list">
         <li class="nav-list-item"><a href="#head">Home</a></li>
         <li class="nav-list-item"><a href="#about">About</a></li>
