Working on active section highlight

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </p>
         <button class="btn get-free">Get Free Now</button>
     </div>
-    <a class="btn-scroll" href="#about" title="Scroll to about section">
+    <a class="btn-scroll blink_me" href="#about" title="Scroll to about section">
       <img src="./img/scroll-icon.png" alt="Scroll image">
     </a>
     </div>
