Alt attributes added

--- a/index.html
+++ b/index.html
@@ -71,25 +71,25 @@
             <li class="service-item">
               <div class="category"><strong>Online Shopping</strong></div>
               <div class="category-picture">
-                <img src="./img/trolley-icon.png" alt="Trolley">
+                <img src="./img/trolley-icon.png" alt="">
               </div>
             </li>
             <li class="service-item">
               <div class="category"><strong>Quality Product<strong></div>
                 <div class="category-picture">
-                  <img src="./img/hand-icon.png">
+                  <img src="./img/hand-icon.png" alt="">
                 </div>
               </li>
             <li class="service-item">
               <div class="category"><strong>Domestic & International Delivery</strong></div>
               <div class="category-picture">
-                <img src="./img/globe-icon.png">
+                <img src="./img/globe-icon.png" alt="">
               </div>
               </li>
             <li class="service-item">
               <div class="category"><strong>Well Organized<strong></div>
                 <div class="category-picture">
-                  <img src="./img/carrot-icon.png">
+                  <img src="./img/carrot-icon.png" alt="">
                 </div>
               </li>
           </ul>
@@ -105,17 +105,17 @@
         </p>
         <div class=gallery-row>
           <div class="gallery-col main">
-            <img src="./img/gallery-image-1.png">
+            <img src="./img/gallery-image-1.png" alt="">
           </div>
           <div class="gallery-col side">
-            <img src="./img/gallery-image-2.png">
-            <img src="./img/gallery-image-3.png">
+            <img src="./img/gallery-image-2.png" alt="">
+            <img src="./img/gallery-image-3.png" alt="">
           </div>
         </div>
         <div class=gallery-row>
           <div class="gallery-col full">
-            <img src="./img/gallery-image-4.png">
-            <img src="./img/gallery-image-5.png">
+            <img src="./img/gallery-image-4.png" alt="">
+            <img src="./img/gallery-image-5.png" alt="">
           </div>
         </div>
       </div>
@@ -192,6 +192,7 @@
               <input type="tel" id="phone" placeholder="Your phone number...">
               <label for="message">Your message</label>                            
               <textarea id="message" placeholder="Your message..."></textarea>
+              <button type="submit" class="btn send">Send</button>
             </form>
           </div>
           <div class="col-1-2 contact-info">
@@ -211,7 +212,7 @@
   <footer class="footer">
     <div class="grid-container">
       <p>&copy; 2015 Company. All right reserved</p>
-      <img src="./img/logo-light.png" alt="Fresh Life Company Logo"/>
+      <a href="#head"><img src="./img/logo-light.png" alt="Fresh Life Company Logo"/></a>
       <p>Made with <span>love</span> by Auskiteez</p>
     </div>
   </footer>
