--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
               </div>
             </li>
             <li class="service-item">
-              <div class="category"><strong>Quality Product<strong></div>
+              <div class="category"><strong>Quality Product</strong></div>
                 <div class="category-picture">
                   <img src="./img/hand-icon.png" alt="">
                 </div>
@@ -87,7 +87,7 @@
               </div>
               </li>
             <li class="service-item">
-              <div class="category"><strong>Well Organized<strong></div>
+              <div class="category"><strong>Well Organized</strong></div>
                 <div class="category-picture">
                   <img src="./img/carrot-icon.png" alt="">
                 </div>
@@ -121,7 +121,7 @@
       </div>
       <button class="btn view-more">View More</button>
     </section>
-    <aside class="subscribe">
+    <aside class="subscribe" id="subscribe">
       <div class="grid-container">
           <h2 class="header">Subscribe To Us</h2>
           <p class="text">
